[gd_scene load_steps=5 format=3 uid="uid://d10pbvciquagq"]

[ext_resource type="Script" uid="uid://cmfypujvjluxs" path="res://scenes/puzzle/clue_panel.gd" id="1_ohlkc"]
[ext_resource type="Theme" uid="uid://bi13kuc248rav" path="res://themes/clue_container.tres" id="2_7x7iq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_on3lc"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="FontFile" id="FontFile_38fss"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="CluePanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_on3lc")
script = ExtResource("1_ohlkc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="AcrossTitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.74509805, 0.74509805, 0.74509805, 1)
theme_override_font_sizes/font_size = 24
text = "ACROSS"

[node name="AcrossDivider" type="ColorRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="AcrossScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_7x7iq")

[node name="AcrossList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/AcrossScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DownTitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.74509805, 0.74509805, 0.74509805, 1)
theme_override_fonts/font = SubResource("FontFile_38fss")
theme_override_font_sizes/font_size = 24
text = "DOWN"

[node name="DownDivider" type="ColorRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="DownScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_7x7iq")

[node name="DownList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/DownScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
